--- a/src/styles/_itemCard.scss
+++ b/src/styles/_itemCard.scss
@@ -8,6 +8,7 @@
   height: 300px;
   width: 320px;
   padding: 20px;
+  margin: 20px;
   box-shadow: 3px 3px 3px 2px rgba(82, 82, 82, 0.2);
   // background-color: var(--background-color);
   transform: translateZ(-100px);
