--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -17,10 +17,8 @@ main {
 .card-container {
   display: grid;
   margin-top: 20px;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: repeat(4, auto);
   justify-content: center;
-
-  grid-column-gap: 20px;
   grid-row-gap: 20px;
   perspective: 1000;
   @media only screen and (max-width: 1340px) {
